# docs/swagger.json
@@ -339,7 +339,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Resep"
+                            "$ref": "#/definitions/models.ResepInput"
                         }
                     }
                 ],
@@ -426,7 +426,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Resep"
+                            "$ref": "#/definitions/models.ResepInput"
                         }
                     },
                     {
@@ -449,35 +449,6 @@
         }
     },
     "definitions": {
-        "models.Bahan": {
-            "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_deleted": {
-                    "type": "boolean"
-                },
-                "komposisi": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Komposisi"
-                    }
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
         "models.BahanInput": {
             "type": "object",
             "required": [
@@ -485,29 +456,6 @@
             ],
             "properties": {
                 "nama": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Kategori": {
-            "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_deleted": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
@@ -523,69 +471,38 @@
                 }
             }
         },
-        "models.Komposisi": {
+        "models.KomposisiInput": {
             "type": "object",
             "required": [
                 "bahan_id",
-                "resep_id",
                 "takaran"
             ],
             "properties": {
-                "bahan": {
-                    "$ref": "#/definitions/models.Bahan"
-                },
                 "bahan_id": {
-                    "type": "integer"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "resep": {
-                    "$ref": "#/definitions/models.Resep"
-                },
-                "resep_id": {
                     "type": "integer"
                 },
                 "takaran": {
                     "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
-        "models.Resep": {
+        "models.ResepInput": {
             "type": "object",
             "required": [
                 "kategori_id",
-                "name"
+                "nama"
             ],
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "kategori": {
-                    "$ref": "#/definitions/models.Kategori"
-                },
                 "kategori_id": {
                     "type": "integer"
                 },
                 "komposisi": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Komposisi"
+                        "$ref": "#/definitions/models.KomposisiInput"
                     }
                 },
-                "name": {
-                    "type": "string"
-                },
-                "updated_at": {
+                "nama": {
                     "type": "string"
                 }
             }
@@ -610,9 +527,6 @@
                 "data": {},
                 "meta": {
                     "$ref": "#/definitions/utils.Meta"
-                },
-                "total_list": {
-                    "type": "integer"
                 }
             }
         }
